Added by EncodedDataAlgorithms -> appsettings.json file

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,12 @@
 {
     "database": {
-        "server": "10.19.10.194",
-        "port": 1433,
-        "name": "SolarDb",
-        "username": "sa",
-        "password": "password123.."
+        "server": ";48n>4$#n%yg",
+        "port": ";8=p",
+        "name": "]sv@wJU",
+        "username": "}e",
+        "password": "ze}R|ueWq&saR"
+    },
+    "encoded_data_algorithms_key": {
+        "key": "+%+^&'rrasaTE53535" 
     }
 }
